# logv

./: .gitignore  README.md  build-gtk.sh  build-wasm.sh  logv-proxy.py  run-gtk.sh  run-wasm.sh
gtk_native/: CMakeLists.txt
gtk_native/src/: main.cpp
logvcore/: CMakeLists.txt  build-windows.bat  build-windows.sh  build.sh
logvcore/cmake/: mingw-w64-x86_64.cmake
logvcore/include/logvcore/: log_entry.h  log_filter.h  log_parser.h  ring_buffer.h
logvcore/src/: bindings.cpp  log_filter.cpp  log_parser.cpp
wasm/: shell.html
wasm/src/: logv_wasm.cpp
